parser.output
   0  $accept : %entry% $end

   1  program : programComp_list EOF

   2  programComp_list :
   3                   | programComp_list programComp

   4  programComp : stmt
   5              | fundef
   6              | classdef
   7              | interfacedef

   8  fundef : typ ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE

   9  formals_opt :
  10              | formal_list

  11  formal_list : typ ID
  12              | formal_list COMMA typ ID

  13  classdef : CLASS ID father_opt interface_opt LBRACE class_stmt_list RBRACE

  14  father_opt : EXTENDS ID
  15             |

  16  interface_opt : IMPLEMENTS id_list
  17                |

  18  id_list : ID
  19          | id_list COMMA ID

  20  interfacedef : INTERFACE ID extend_mem_opt LBRACE absFundef_list RBRACE

  21  extend_mem_opt : EXTENDS id_list
  22                 |

  23  absFundef_list :
  24                 | absFundef_list absFundef

  25  absFundef : fieldMod typ ID LPAREN formals_opt RPAREN SEMI

  26  class_stmt_list :
  27                  | class_stmt_list class_stmt

  28  class_stmt : CONSTRUCTOR typ LPAREN formals_opt RPAREN LBRACE construct_stmt_list RBRACE
  29             | accControl fieldMod fundef
  30             | accControl fieldMod typ ID def_stmt SEMI

  31  construct_stmt_list :
  32                      | construct_stmt_list construct_stmt

  33  construct_stmt : THIS DOT ID ASSIGN expr SEMI

  34  accControl : PUBLIC
  35             | PRIVATE
  36             | PROTECT
  37             |

  38  fieldMod : STATIC
  39           |

  40  empty_square_list : LSQUARE RSQUARE
  41                    | empty_square_list LSQUARE RSQUARE

  42  list_type : INT empty_square_list
  43            | BOOL empty_square_list
  44            | DOUBLE empty_square_list
  45            | STRING empty_square_list
  46            | ID empty_square_list

  47  single_type : INT
  48              | BOOL
  49              | DOUBLE
  50              | VOID
  51              | STRING
  52              | ID

  53  typ : single_type
  54      | list_type

  55  stmt_list :
  56            | stmt_list stmt

  57  stmt : expr SEMI
  58       | RETURN expr_opt SEMI
  59       | IF LPAREN expr RPAREN stmt
  60       | LBRACE stmt_list RBRACE
  61       | IF LPAREN expr RPAREN stmt ELSE stmt
  62       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  63       | WHILE LPAREN expr RPAREN stmt

  64  controlFlow : BREAK
  65              | CONTINUE

  66  expr_opt :
  67           | expr

  68  index_expr : LITERAL
  69             | ID
  70             | expr PLUS expr
  71             | expr MINUS expr
  72             | expr TIMES expr
  73             | expr DIVIDE expr
  74             | expr DOT expr
  75             | ID LPAREN args_opt RPAREN
  76             | MINUS expr

  77  index_expr_list : index_expr
  78                  | index_expr_list COMMA index_expr

  79  def_asn_expr : ID ASSIGN expr
  80               | ID ASSIGN NEW expr
  81               | typ ID ASSIGN NEW expr
  82               | typ ID def_stmt

  83  expr : THIS
  84       | index_expr
  85       | DLIT
  86       | BLIT
  87       | STRINGLIT
  88       | NULL
  89       | expr EQ expr
  90       | expr NEQ expr
  91       | expr LT expr
  92       | expr LEQ expr
  93       | expr GT expr
  94       | expr GEQ expr
  95       | expr AND expr
  96       | expr OR expr
  97       | NOT expr
  98       | def_asn_expr
  99       | LPAREN expr RPAREN
 100       | controlFlow
 101       | LSQUARE expr_list_opt RSQUARE
 102       | ID square_list def_stmt
 103       | single_type LPAREN index_expr_list RPAREN

 104  square_list : LSQUARE index_expr RSQUARE
 105              | square_list LSQUARE index_expr RSQUARE

 106  expr_list_opt : expr_list
 107                |

 108  expr_list : expr
 109            | expr_list COMMA expr

 110  def_stmt : ASSIGN expr
 111           |

 112  args_opt :
 113           | args_list

 114  args_list : expr
 115            | args_list COMMA expr

 116  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (116)
	programComp_list : .  (2)

	.  reduce 2

	program  goto 3
	programComp_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (116)

	.  reduce 116


state 4
	program : programComp_list . EOF  (1)
	programComp_list : programComp_list . programComp  (3)

	LPAREN  shift 5
	LBRACE  shift 6
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	RETURN  shift 10
	IF  shift 11
	FOR  shift 12
	WHILE  shift 13
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	CLASS  shift 21
	INTERFACE  shift 22
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	EOF  shift 30
	.  error

	programComp  goto 31
	stmt  goto 32
	fundef  goto 33
	classdef  goto 34
	interfacedef  goto 35
	typ  goto 36
	expr  goto 37
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 5
	expr : LPAREN . expr RPAREN  (99)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 44
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 6
	stmt : LBRACE . stmt_list RBRACE  (60)
	stmt_list : .  (55)

	.  reduce 55

	stmt_list  goto 45


state 7
	expr : LSQUARE . expr_list_opt RSQUARE  (101)
	expr_list_opt : .  (107)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	RSQUARE  reduce 107

	typ  goto 43
	expr  goto 46
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42
	expr_list_opt  goto 47
	expr_list  goto 48


state 8
	index_expr : MINUS . expr  (76)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 49
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 9
	expr : NOT . expr  (97)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 50
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 10
	stmt : RETURN . expr_opt SEMI  (58)
	expr_opt : .  (66)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	SEMI  reduce 66

	typ  goto 43
	expr  goto 51
	list_type  goto 38
	single_type  goto 39
	expr_opt  goto 52
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 11
	stmt : IF . LPAREN expr RPAREN stmt  (59)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (61)

	LPAREN  shift 53
	.  error


state 12
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (62)

	LPAREN  shift 54
	.  error


state 13
	stmt : WHILE . LPAREN expr RPAREN stmt  (63)

	LPAREN  shift 55
	.  error


state 14
	list_type : INT . empty_square_list  (42)
	single_type : INT .  (47)

	LSQUARE  shift 56
	LPAREN  reduce 47
	ID  reduce 47

	empty_square_list  goto 57


state 15
	list_type : BOOL . empty_square_list  (43)
	single_type : BOOL .  (48)

	LSQUARE  shift 56
	LPAREN  reduce 48
	ID  reduce 48

	empty_square_list  goto 58


state 16
	list_type : DOUBLE . empty_square_list  (44)
	single_type : DOUBLE .  (49)

	LSQUARE  shift 56
	LPAREN  reduce 49
	ID  reduce 49

	empty_square_list  goto 59


state 17
	single_type : VOID .  (50)

	.  reduce 50


state 18
	list_type : STRING . empty_square_list  (45)
	single_type : STRING .  (51)

	LSQUARE  shift 56
	LPAREN  reduce 51
	ID  reduce 51

	empty_square_list  goto 60


state 19
	controlFlow : BREAK .  (64)

	.  reduce 64


state 20
	controlFlow : CONTINUE .  (65)

	.  reduce 65


state 21
	classdef : CLASS . ID father_opt interface_opt LBRACE class_stmt_list RBRACE  (13)

	ID  shift 61
	.  error


state 22
	interfacedef : INTERFACE . ID extend_mem_opt LBRACE absFundef_list RBRACE  (20)

	ID  shift 62
	.  error


state 23
	expr : THIS .  (83)

	.  reduce 83


state 24
	expr : NULL .  (88)

	.  reduce 88


state 25
	index_expr : LITERAL .  (68)

	.  reduce 68


state 26
	expr : BLIT .  (86)

	.  reduce 86


27: shift/reduce conflict (shift 63, reduce 52) on LPAREN
state 27
	list_type : ID . empty_square_list  (46)
	single_type : ID .  (52)
	index_expr : ID .  (69)
	index_expr : ID . LPAREN args_opt RPAREN  (75)
	def_asn_expr : ID . ASSIGN expr  (79)
	def_asn_expr : ID . ASSIGN NEW expr  (80)
	expr : ID . square_list def_stmt  (102)

	LPAREN  shift 63
	LSQUARE  shift 64
	ASSIGN  shift 65
	SEMI  reduce 69
	RPAREN  reduce 69
	RSQUARE  reduce 69
	COMMA  reduce 69
	PLUS  reduce 69
	MINUS  reduce 69
	TIMES  reduce 69
	DIVIDE  reduce 69
	DOT  reduce 69
	EQ  reduce 69
	NEQ  reduce 69
	LT  reduce 69
	LEQ  reduce 69
	GT  reduce 69
	GEQ  reduce 69
	AND  reduce 69
	OR  reduce 69
	ID  reduce 52

	empty_square_list  goto 66
	square_list  goto 67


state 28
	expr : DLIT .  (85)

	.  reduce 85


state 29
	expr : STRINGLIT .  (87)

	.  reduce 87


state 30
	program : programComp_list EOF .  (1)

	.  reduce 1


state 31
	programComp_list : programComp_list programComp .  (3)

	.  reduce 3


state 32
	programComp : stmt .  (4)

	.  reduce 4


state 33
	programComp : fundef .  (5)

	.  reduce 5


state 34
	programComp : classdef .  (6)

	.  reduce 6


state 35
	programComp : interfacedef .  (7)

	.  reduce 7


state 36
	fundef : typ . ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (8)
	def_asn_expr : typ . ID ASSIGN NEW expr  (81)
	def_asn_expr : typ . ID def_stmt  (82)

	ID  shift 68
	.  error


state 37
	stmt : expr . SEMI  (57)
	index_expr : expr . PLUS expr  (70)
	index_expr : expr . MINUS expr  (71)
	index_expr : expr . TIMES expr  (72)
	index_expr : expr . DIVIDE expr  (73)
	index_expr : expr . DOT expr  (74)
	expr : expr . EQ expr  (89)
	expr : expr . NEQ expr  (90)
	expr : expr . LT expr  (91)
	expr : expr . LEQ expr  (92)
	expr : expr . GT expr  (93)
	expr : expr . GEQ expr  (94)
	expr : expr . AND expr  (95)
	expr : expr . OR expr  (96)

	SEMI  shift 69
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	DOT  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 38
	typ : list_type .  (54)

	.  reduce 54


state 39
	typ : single_type .  (53)
	expr : single_type . LPAREN index_expr_list RPAREN  (103)

	LPAREN  shift 83
	ID  reduce 53


state 40
	expr : controlFlow .  (100)

	.  reduce 100


state 41
	expr : index_expr .  (84)

	.  reduce 84


state 42
	expr : def_asn_expr .  (98)

	.  reduce 98


state 43
	def_asn_expr : typ . ID ASSIGN NEW expr  (81)
	def_asn_expr : typ . ID def_stmt  (82)

	ID  shift 84
	.  error


state 44
	index_expr : expr . PLUS expr  (70)
	index_expr : expr . MINUS expr  (71)
	index_expr : expr . TIMES expr  (72)
	index_expr : expr . DIVIDE expr  (73)
	index_expr : expr . DOT expr  (74)
	expr : expr . EQ expr  (89)
	expr : expr . NEQ expr  (90)
	expr : expr . LT expr  (91)
	expr : expr . LEQ expr  (92)
	expr : expr . GT expr  (93)
	expr : expr . GEQ expr  (94)
	expr : expr . AND expr  (95)
	expr : expr . OR expr  (96)
	expr : LPAREN expr . RPAREN  (99)

	RPAREN  shift 85
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	DOT  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 45
	stmt_list : stmt_list . stmt  (56)
	stmt : LBRACE stmt_list . RBRACE  (60)

	LPAREN  shift 5
	LBRACE  shift 6
	RBRACE  shift 86
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	RETURN  shift 10
	IF  shift 11
	FOR  shift 12
	WHILE  shift 13
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	stmt  goto 87
	typ  goto 43
	expr  goto 37
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 46
	index_expr : expr . PLUS expr  (70)
	index_expr : expr . MINUS expr  (71)
	index_expr : expr . TIMES expr  (72)
	index_expr : expr . DIVIDE expr  (73)
	index_expr : expr . DOT expr  (74)
	expr : expr . EQ expr  (89)
	expr : expr . NEQ expr  (90)
	expr : expr . LT expr  (91)
	expr : expr . LEQ expr  (92)
	expr : expr . GT expr  (93)
	expr : expr . GEQ expr  (94)
	expr : expr . AND expr  (95)
	expr : expr . OR expr  (96)
	expr_list : expr .  (108)

	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	DOT  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	RSQUARE  reduce 108
	COMMA  reduce 108


state 47
	expr : LSQUARE expr_list_opt . RSQUARE  (101)

	RSQUARE  shift 88
	.  error


state 48
	expr_list_opt : expr_list .  (106)
	expr_list : expr_list . COMMA expr  (109)

	COMMA  shift 89
	RSQUARE  reduce 106


state 49
	index_expr : expr . PLUS expr  (70)
	index_expr : expr . MINUS expr  (71)
	index_expr : expr . TIMES expr  (72)
	index_expr : expr . DIVIDE expr  (73)
	index_expr : expr . DOT expr  (74)
	index_expr : MINUS expr .  (76)
	expr : expr . EQ expr  (89)
	expr : expr . NEQ expr  (90)
	expr : expr . LT expr  (91)
	expr : expr . LEQ expr  (92)
	expr : expr . GT expr  (93)
	expr : expr . GEQ expr  (94)
	expr : expr . AND expr  (95)
	expr : expr . OR expr  (96)

	DOT  shift 74
	SEMI  reduce 76
	RPAREN  reduce 76
	RSQUARE  reduce 76
	COMMA  reduce 76
	PLUS  reduce 76
	MINUS  reduce 76
	TIMES  reduce 76
	DIVIDE  reduce 76
	EQ  reduce 76
	NEQ  reduce 76
	LT  reduce 76
	LEQ  reduce 76
	GT  reduce 76
	GEQ  reduce 76
	AND  reduce 76
	OR  reduce 76


state 50
	index_expr : expr . PLUS expr  (70)
	index_expr : expr . MINUS expr  (71)
	index_expr : expr . TIMES expr  (72)
	index_expr : expr . DIVIDE expr  (73)
	index_expr : expr . DOT expr  (74)
	expr : expr . EQ expr  (89)
	expr : expr . NEQ expr  (90)
	expr : expr . LT expr  (91)
	expr : expr . LEQ expr  (92)
	expr : expr . GT expr  (93)
	expr : expr . GEQ expr  (94)
	expr : expr . AND expr  (95)
	expr : expr . OR expr  (96)
	expr : NOT expr .  (97)

	DOT  shift 74
	SEMI  reduce 97
	RPAREN  reduce 97
	RSQUARE  reduce 97
	COMMA  reduce 97
	PLUS  reduce 97
	MINUS  reduce 97
	TIMES  reduce 97
	DIVIDE  reduce 97
	EQ  reduce 97
	NEQ  reduce 97
	LT  reduce 97
	LEQ  reduce 97
	GT  reduce 97
	GEQ  reduce 97
	AND  reduce 97
	OR  reduce 97


state 51
	expr_opt : expr .  (67)
	index_expr : expr . PLUS expr  (70)
	index_expr : expr . MINUS expr  (71)
	index_expr : expr . TIMES expr  (72)
	index_expr : expr . DIVIDE expr  (73)
	index_expr : expr . DOT expr  (74)
	expr : expr . EQ expr  (89)
	expr : expr . NEQ expr  (90)
	expr : expr . LT expr  (91)
	expr : expr . LEQ expr  (92)
	expr : expr . GT expr  (93)
	expr : expr . GEQ expr  (94)
	expr : expr . AND expr  (95)
	expr : expr . OR expr  (96)

	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	DOT  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	SEMI  reduce 67
	RPAREN  reduce 67


state 52
	stmt : RETURN expr_opt . SEMI  (58)

	SEMI  shift 90
	.  error


state 53
	stmt : IF LPAREN . expr RPAREN stmt  (59)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (61)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 91
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 54
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (62)
	expr_opt : .  (66)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	SEMI  reduce 66

	typ  goto 43
	expr  goto 51
	list_type  goto 38
	single_type  goto 39
	expr_opt  goto 92
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 55
	stmt : WHILE LPAREN . expr RPAREN stmt  (63)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 93
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 56
	empty_square_list : LSQUARE . RSQUARE  (40)

	RSQUARE  shift 94
	.  error


state 57
	empty_square_list : empty_square_list . LSQUARE RSQUARE  (41)
	list_type : INT empty_square_list .  (42)

	LSQUARE  shift 95
	LPAREN  reduce 42
	ID  reduce 42


state 58
	empty_square_list : empty_square_list . LSQUARE RSQUARE  (41)
	list_type : BOOL empty_square_list .  (43)

	LSQUARE  shift 95
	LPAREN  reduce 43
	ID  reduce 43


state 59
	empty_square_list : empty_square_list . LSQUARE RSQUARE  (41)
	list_type : DOUBLE empty_square_list .  (44)

	LSQUARE  shift 95
	LPAREN  reduce 44
	ID  reduce 44


state 60
	empty_square_list : empty_square_list . LSQUARE RSQUARE  (41)
	list_type : STRING empty_square_list .  (45)

	LSQUARE  shift 95
	LPAREN  reduce 45
	ID  reduce 45


state 61
	classdef : CLASS ID . father_opt interface_opt LBRACE class_stmt_list RBRACE  (13)
	father_opt : .  (15)

	EXTENDS  shift 96
	LBRACE  reduce 15
	IMPLEMENTS  reduce 15

	father_opt  goto 97


state 62
	interfacedef : INTERFACE ID . extend_mem_opt LBRACE absFundef_list RBRACE  (20)
	extend_mem_opt : .  (22)

	EXTENDS  shift 98
	LBRACE  reduce 22

	extend_mem_opt  goto 99


state 63
	index_expr : ID LPAREN . args_opt RPAREN  (75)
	args_opt : .  (112)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	RPAREN  reduce 112

	typ  goto 43
	expr  goto 100
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	args_opt  goto 101
	def_asn_expr  goto 42
	args_list  goto 102


state 64
	empty_square_list : LSQUARE . RSQUARE  (40)
	square_list : LSQUARE . index_expr RSQUARE  (104)

	LPAREN  shift 5
	LSQUARE  shift 7
	RSQUARE  shift 94
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 103
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 104
	def_asn_expr  goto 42


state 65
	def_asn_expr : ID ASSIGN . expr  (79)
	def_asn_expr : ID ASSIGN . NEW expr  (80)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	NEW  shift 105
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 106
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 66
	empty_square_list : empty_square_list . LSQUARE RSQUARE  (41)
	list_type : ID empty_square_list .  (46)

	LSQUARE  shift 95
	LPAREN  reduce 46
	ID  reduce 46


state 67
	expr : ID square_list . def_stmt  (102)
	square_list : square_list . LSQUARE index_expr RSQUARE  (105)
	def_stmt : .  (111)

	LSQUARE  shift 107
	ASSIGN  shift 108
	SEMI  reduce 111
	RPAREN  reduce 111
	RSQUARE  reduce 111
	COMMA  reduce 111
	PLUS  reduce 111
	MINUS  reduce 111
	TIMES  reduce 111
	DIVIDE  reduce 111
	DOT  reduce 111
	EQ  reduce 111
	NEQ  reduce 111
	LT  reduce 111
	LEQ  reduce 111
	GT  reduce 111
	GEQ  reduce 111
	AND  reduce 111
	OR  reduce 111

	def_stmt  goto 109


state 68
	fundef : typ ID . LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (8)
	def_asn_expr : typ ID . ASSIGN NEW expr  (81)
	def_asn_expr : typ ID . def_stmt  (82)
	def_stmt : .  (111)

	LPAREN  shift 110
	ASSIGN  shift 111
	SEMI  reduce 111
	PLUS  reduce 111
	MINUS  reduce 111
	TIMES  reduce 111
	DIVIDE  reduce 111
	DOT  reduce 111
	EQ  reduce 111
	NEQ  reduce 111
	LT  reduce 111
	LEQ  reduce 111
	GT  reduce 111
	GEQ  reduce 111
	AND  reduce 111
	OR  reduce 111

	def_stmt  goto 112


state 69
	stmt : expr SEMI .  (57)

	.  reduce 57


state 70
	index_expr : expr PLUS . expr  (70)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 113
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 71
	index_expr : expr MINUS . expr  (71)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 114
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 72
	index_expr : expr TIMES . expr  (72)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 115
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 73
	index_expr : expr DIVIDE . expr  (73)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 116
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 74
	index_expr : expr DOT . expr  (74)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error

	typ  goto 43
	expr  goto 117
	list_type  goto 38
	single_type  goto 39
	controlFlow  goto 40
	index_expr  goto 41
	def_asn_expr  goto 42


state 75
	expr : expr EQ . expr  (89)

	LPAREN  shift 5
	LSQUARE  shift 7
	MINUS  shift 8
	NOT  shift 9
	INT  shift 14
	BOOL  shift 15
	DOUBLE  shift 16
	VOID  shift 17
	STRING  shift 18
	BREAK  shift 19
	CONTINUE  shift 20
	THIS  shift 23
	NULL  shift 24
	LITERAL  shift 25
	BLIT  shift 26
	ID  shift 27
	DLIT  shift 28
	STRINGLIT  shift 29
	.  error
